Migrate to .NET 5.0

--- a/src/QuickAuth/Properties/launchSettings.json
+++ b/src/QuickAuth/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "QuickAuth": {
-      "commandName": "Project",
-      "commandLineArgs": "clients"
+      "commandName": "Project"
     }
   }
 }
