--- a/src/QuickAuth/Properties/launchSettings.json
+++ b/src/QuickAuth/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "QuickAuth": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-c 12313"
     }
   }
 }
